k8s/manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: what3words-gateway
  namespace: envoy-gateway-system

spec:
  gatewayClassName: envoy

  listeners:
    - name: http
      protocol: HTTP
      port: 80

      allowedRoutes:
        namespaces:
          from: All
